--- a/public/index.html
+++ b/public/index.html
@@ -41,18 +41,7 @@
   });
     </script>
   </head>
-  <body onload="myFunction()">
-    <div id="loading"></div>
+  <body>
     <div id="root"></div>
-    
-    <script>
-      var perloader = document.getElementById('loading');
-      function myFunction() {
-        setTimeout(()=>{
-          perloader.style.display = 'none';
-        },1000)
-        
-      }
-    </script>
   </body>
 </html>
