--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     $(window).scroll(function () {
       var scroll = $(window).scrollTop();
       if (scroll > 60) {
-        $(".navbarscrl").css("background", "#3399ff");
+        $(".navbarscrl").css("background", "#78a3fa");
         $(".brand").css("color", "white");
         $(".alinks").css("color", "white");
         $(".alinks").hover(function() {
@@ -29,10 +29,10 @@
         })
       } else {
         $(".navbarscrl").css("background", "white");
-        $(".brand").css("color", "#3399ff");
+        $(".brand").css("color", "#78a3fa");
         $(".alinks").css("color", "black");
         $(".alinks").hover(function() {
-          $(this).css('color','#3399ff');
+          $(this).css('color','#78a3fa');
         },function() {
           $(this).css('color','black')
         })
@@ -40,6 +40,7 @@
     });
   });
     </script>
+
   </head>
   <body>
     <div id="root"></div>
